Add it to header

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -86,6 +86,13 @@ import SponsorsBanner from "./SponsorsBanner.astro"
         <li class="mx-4">
           <a
             class="font-bold whitespace-nowrap dark:text-white"
+            href="/download"
+            rel="prefetch">Download</a
+          >
+        </li>
+        <li class="mx-4">
+          <a
+            class="font-bold whitespace-nowrap dark:text-white"
             href={DOCUMENTATION_URL}
             target="_blank">Docs</a
           >
@@ -133,6 +140,13 @@ import SponsorsBanner from "./SponsorsBanner.astro"
             class="font-bold block py-3 px-4 text-lg border-t border-dotted"
             href="/get-started"
             rel="prefetch">Get Started</a
+          >
+        </li>
+        <li>
+          <a
+            class="font-bold block py-3 px-4 text-lg border-t border-dotted"
+            href="/download"
+            rel="prefetch">Download</a
           >
         </li>
         <li>
