--- a/src/pages/download.astro
+++ b/src/pages/download.astro
@@ -36,13 +36,13 @@ const downloads = {
         name: "Windows Installer (amd64) - Recommended",
         file: `ddev_windows_amd64_installer.v${version}.exe`,
         path: "/download/ddev_windows_amd64_installer.exe",
-        description: "Recommended installer for Traditional Windows (64-bit Intel/AMD)",
+        description: "Recommended installer for WSL2 and Traditional Windows (64-bit Intel/AMD)",
       },
       {
         name: "Windows Installer (arm64) - Recommended",
         file: `ddev_windows_arm64_installer.v${version}.exe`,
         path: "/download/ddev_windows_arm64_installer.exe",
-        description: "Recommended installer for Traditional Windows on ARM devices",
+        description: "Recommended installer for WSL2 and Traditional Windows on ARM devices",
       },
       {
         name: "Windows Portable (amd64)",
