Add key links to corporate registration, etc

--- a/src/pages/foundation.astro
+++ b/src/pages/foundation.astro
@@ -111,10 +111,12 @@ const description = `Learn about the DDEV Foundation, a Colorado, USA 501(c)(3) 
           </section>
 
           <section class="mb-8">
-            <h2>Legal Registration</h2>
-            <p>
-              Review our <a href="https://www.sos.state.co.us/biz/BusinessEntityDetail.do?quitButtonDestination=BusinessEntityResults&nameTyp=ENT&masterFileId=20211820326&entityId2=20211820326&fileId=20211820326&srchTyp=ENTITY" target="_blank" rel="noopener">Colorado nonprofit corporation registration</a>.
-            </p>
+            <h2>Legal Registration and Articles of Incorporation</h2>
+            <ul>
+              <li>Review our <a href="https://www.sos.state.co.us/biz/BusinessEntityDetail.do?quitButtonDestination=BusinessEntityResults&nameTyp=ENT&masterFileId=20211820326&entityId2=20211820326&fileId=20211820326&srchTyp=ENTITY" target="_blank" rel="noopener">Colorado nonprofit corporation registration</a>.</li>
+              <li>Our <a href="https://www.sos.state.co.us/biz/ViewImage.do?masterFileId=20211820326&fileId=20258242147">Articles of Incorporation</a> are posted with the State of Colorado, USA.</li>
+              <li>US 501(c)(3) nonprofit information available at <a href="https://apps.irs.gov/app/eos/">IRS Tax Exempt Organization Search</a>, search for "DDEV Foundation".</li>
+            </ul>
           </section>
         </article>
       </PostBody>
