remove white border on rounded images

--- a/src/pages/foundation.astro
+++ b/src/pages/foundation.astro
@@ -44,7 +44,7 @@ const description = `Learn about the DDEV Foundation, a Colorado, USA 501(c)(3) 
 
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-6">
               <div class="flex items-start space-x-4">
-                <img src="/img/blog/2025/12/mike-anello-headshot.jpg" alt="Mike Anello headshot" class="w-24 h-24 rounded-full object-cover flex-shrink-0" />
+                <img src="/img/blog/2025/12/mike-anello-headshot.jpg" alt="Mike Anello headshot" class="w-24 h-24 rounded-full object-cover flex-shrink-0 [mask-image:radial-gradient(circle,black_69%,transparent_70%)] [-webkit-mask-image:radial-gradient(circle,black_69%,transparent_70%)]" />
                 <div>
                   <h3 class="text-lg font-semibold">Michael Anello</h3>
                   <p class="text-sm text-gray-600"><a href="https://github.com/ultimike" target="_blank" rel="noopener">@ultimike</a></p>
@@ -53,7 +53,7 @@ const description = `Learn about the DDEV Foundation, a Colorado, USA 501(c)(3) 
               </div>
 
               <div class="flex items-start space-x-4">
-                <img src="/img/blog/2025/12/jen-lampton-headshot.png" alt="Jen Lampton headshot" class="w-24 h-24 rounded-full object-cover flex-shrink-0" />
+                <img src="/img/blog/2025/12/jen-lampton-headshot.png" alt="Jen Lampton headshot" class="w-24 h-24 rounded-full object-cover flex-shrink-0 [mask-image:radial-gradient(circle,black_69%,transparent_70%)] [-webkit-mask-image:radial-gradient(circle,black_69%,transparent_70%)]" />
                 <div>
                   <h3 class="text-lg font-semibold">Jen Lampton</h3>
                   <p class="text-sm text-gray-600"><a href="https://github.com/jenlampton" target="_blank" rel="noopener">@jenlampton</a></p>
@@ -62,7 +62,7 @@ const description = `Learn about the DDEV Foundation, a Colorado, USA 501(c)(3) 
               </div>
 
               <div class="flex items-start space-x-4">
-                <img src="/img/blog/2025/12/benni-mack-headshot.png" alt="Benni Mack headshot" class="w-24 h-24 rounded-full object-cover flex-shrink-0" />
+                <img src="/img/blog/2025/12/benni-mack-headshot.png" alt="Benni Mack headshot" class="w-24 h-24 rounded-full object-cover flex-shrink-0 [mask-image:radial-gradient(circle,black_69%,transparent_70%)] [-webkit-mask-image:radial-gradient(circle,black_69%,transparent_70%)]" />
                 <div>
                   <h3 class="text-lg font-semibold">Benni Mack</h3>
                   <p class="text-sm text-gray-600"><a href="https://github.com/bmack" target="_blank" rel="noopener">@bmack</a></p>
@@ -71,7 +71,7 @@ const description = `Learn about the DDEV Foundation, a Colorado, USA 501(c)(3) 
               </div>
 
               <div class="flex items-start space-x-4">
-                <img src="/img/blog/2025/12/andrew-berry-headshot.jpg" alt="Andrew Berry headshot" class="w-24 h-24 rounded-full object-cover flex-shrink-0" />
+                <img src="/img/blog/2025/12/andrew-berry-headshot.jpg" alt="Andrew Berry headshot" class="w-24 h-24 rounded-full object-cover flex-shrink-0 [mask-image:radial-gradient(circle,black_69%,transparent_70%)] [-webkit-mask-image:radial-gradient(circle,black_69%,transparent_70%)]" />
                 <div>
                   <h3 class="text-lg font-semibold">Andrew Berry</h3>
                   <p class="text-sm text-gray-600"><a href="https://github.com/deviantintegral" target="_blank" rel="noopener">@deviantintegral</a></p>
@@ -80,7 +80,7 @@ const description = `Learn about the DDEV Foundation, a Colorado, USA 501(c)(3) 
               </div>
 
               <div class="flex items-start space-x-4">
-                <img src="/img/blog/2025/12/randy-fay-headshot.jpg" alt="Randy Fay headshot" class="w-24 h-24 rounded-full object-cover flex-shrink-0" />
+                <img src="/img/blog/2025/12/randy-fay-headshot.jpg" alt="Randy Fay headshot" class="w-24 h-24 rounded-full object-cover flex-shrink-0 [mask-image:radial-gradient(circle,black_69%,transparent_70%)] [-webkit-mask-image:radial-gradient(circle,black_69%,transparent_70%)]" />
                 <div>
                   <h3 class="text-lg font-semibold">Randy Fay</h3>
                   <p class="text-sm text-gray-600"><a href="https://github.com/rfay" target="_blank" rel="noopener">@rfay</a></p>
