--- a/src/pages/support-ddev.astro
+++ b/src/pages/support-ddev.astro
@@ -30,7 +30,7 @@ const title = `Support DDEV`
           <li><a href="#financial-support">🎯 Financial Support</a></li>
           <li><a href="#community-contributions">🤝 Community Contributions</a></li>
           <li><a href="#spread-the-word">📢 Spread the Word</a></li>
-          <li><a href="#make-a-difference">🌟 Make a Difference</a></li>
+          <li><a href="#make-a-difference">🌟 Ready to Make a Difference?</a></li>
         </ul>
       </section>
 
